# binance_futures_data_lake

./: .gitattributes  .gitignore  pyproject.toml  requirements.txt  test.py  trade_backtest_router_short.py  trade_diagnostics_mae_mfe_short.py  trade_sweep_tpR_short.py
Script Creation/: create_structure.ps1
config/: collector.yml
logs/: daily_job_20260209_101234.txt  daily_job_20260209_110334.txt  daily_job_20260209_111428.txt  daily_job_20260209_111442.txt  daily_job_20260209_112208.txt  daily_job_20260209_112346.txt  daily_job_20260209_112835.txt  daily_job_20260209_115128.txt  daily_job_20260209_120411.txt  daily_job_20260209_120922.txt  daily_job_20260209_125706.txt  daily_job_20260210_074345.txt
scripts/: daily_job.ps1  daily_job.sh  hourly_job.zsh  show_m1_candle.py
scripts/backtest/: backtest_router_event_v1.py  backtest_router_event_v1_1.py  run_ml_filter_v1.py  run_ml_filter_v2.py  run_ml_m15_v1.py  run_ml_m15_v2_flow.py  run_ml_m5_v1.py  run_ml_regime_month_v1.py  run_ml_regime_week_v1.py  run_sweep_router_v2.py  run_sweep_router_v3_breakout.py
scripts/research/: analyze_low_plus_debug.py  analyze_low_plus_policy.py  audit_regime_cases_v1.py  backtest_router_event_v1.py  build_h1_regime_router.py  build_h1_regime_router_v2.py  build_joined_m1_long_v1.py  build_m15_direction_regime.py  build_m15_prices_from_m1.py  build_m15_prices_from_raw_m1.py  build_m1_features.py  build_m5_from_m1.py  build_m5_vol_regime.py  build_mtf_context_day_v1.py  build_mtf_context_h1_v1.py  build_mtf_context_h4_v1.py  build_mtf_context_m15_v1.py  build_mtf_context_month_v1.py  (+23 more)
(+2870 files in other folders)
