[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-futures-data-lake"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyarrow>=14.0",
  "requests>=2.31",
  "pyyaml>=6.0",
  "python-dateutil>=2.8",
  "tqdm>=4.66"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
